# ingester

./: .gitignore  getDiscordForumChannels.js  package-lock.json  package.json  pyproject.toml  threads.json  uploadToQdrant.py
❓help-and-support_9aa3e103-cbdf-47c2-a0b4-cdcce574605b/: ❓help-and-support_page_1.json  ❓help-and-support_page_10.json  ❓help-and-support_page_11.json  ❓help-and-support_page_12.json  ❓help-and-support_page_13.json  ❓help-and-support_page_14.json  ❓help-and-support_page_2.json  ❓help-and-support_page_3.json  ❓help-and-support_page_4.json  ❓help-and-support_page_5.json  ❓help-and-support_page_6.json  ❓help-and-support_page_7.json  ❓help-and-support_page_8.json  ❓help-and-support_page_9.json
