[tool.poetry]
name = "ingester"
version = "0.1.0"
description = ""
authors = ["kartik-gupta-ij <kartikgupta7267@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qdrant-client = "^1.12.1"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
